# Capstone_Weather_ML

./: .gitignore  Dockerfile.airflow  Dockerfile.api  Dockerfile.dbt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rsa_key_encrypted.p8  test.py  test_snowflake_connection.py  weather_predictions.csv  weather_predictions_7days_with_condition.csv  weather_predictions_with_condition.csv
.github/workflows/: dbt-cd.yml  dbt-ci.yml
AI_chatbot/: pdf_ingest.py  streamlit_app.py  streamlit_app_2.py  test_chat_bot.py  test_date_parser.py
airflow/: requirements.txt
airflow/dags/: predict_weather.py  processing_dbt.py  processing_weather.py  processing_weather_aggregation&predict.py  processing_weather_data.py  simulate_data.py  testing_dag.py
dbt/: .sqlfluff  dbt_project.yml  package-lock.yml  profiles-cicd.yml  profiles.yml
dbt/.dbt/: profiles-cicd.yml  profiles.yml  profiles_cicd.yml
dbt/docs/: weather_data.md
dbt/macros/: log_current_user_and_role.sql
dbt/models/: metricflow_time_spine.sql
dbt/models/01_staging/: schema.yml  stg_vietnam_districts.sql  stg_vietnam_provinces.sql  stg_weather_data.sql
dbt/profiles/: profiles.yml
dbt/tests/: test_no_duplicated_province_name.sql
dbt_weather/: dbt_project.yml
docs/: erd.dbml  weather_ml_erd.dbml
kafka/consumers/: api_weather_consumer.py
kafka/producers/: api_weather_producer.py
profiles/: profiles.yml
snowflake_utils/: snowflake_loader.py
training_weather_model/: condition_label_encoder.pkl  region_label_encoder.pkl  training_model.py  weather_data.csv
(+27 files in other folders)
